change on header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,1 @@
-<header class="py-[22px] px-[102px] fixed top-0 flex items-center justify-between w-full">
-  <div class="">
-    <!-- logo -->
-    <app-logo></app-logo>
-  
-  </div>
-
-  <div class="flex items-center justify-between flex-grow">
-    <!-- primer menu -->
-    <nav class="ml-6 text-sm">
-      <ul class="flex [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2 [&>li>a]:font-semibold">
-        <li>
-          <a href="#">MENU</a>
-        </li>
-        <li>
-          <a href="#">REWARDS</a>
-        </li>
-        <li>
-          <a href="#">GIFT CARDS</a>
-        </li>
-      </ul>
-    </nav> 
-    
-    <!-- Segundo Meni -->
-    <nav class="flex items-center mr-20">
-      <span class="text-sm flex mr-10">
-        Find a store
-      </span>
-      <ul class="flex [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
-        <li>
-          <a href="#">Sign in</a>
-        </li>
-        <li>
-          <a href="#">Join now</a>
-        </li>
-      </ul>
-    </nav>
-  </div> 
-    
-</header>
+<app-header></app-header>
