--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
+
 <app-header></app-header>
+<app-scrollheader></app-scrollheader>
+<app-herolanding></app-herolanding>
+<app-herolanding></app-herolanding>
