--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,14 @@
-<header class="flex items-center h-20 px-10 lg:px-20 ">
-    <div class="">
+<header class="container mx-auto">
+  <div class=" flex items-center font-sodo ">
+    <div>
       <!-- logo -->
-      <app-logo></app-logo>
-    
+      <app-logo></app-logo>  
     </div>
-    <div class=" hidden md:flex flex-grow justify-between">
+    
+    <div class="hidden md:flex flex-grow justify-between">
       <!-- primer menu -->
-      <nav class=" ml-5 text-sm">
-        <ul class="flex [&>li>a]:inline-block [&>li]:h-full [&>li>a]:px-4 [&>li>a]:py-2 [&>li>a]:font-semibold">
+      <nav  >
+        <ul class="flex gap-3 px-4 font text-base tracking-wider">
           <li class=" hover:text-[#008248]">
             <a href="#">MENU</a>
           </li>
@@ -21,23 +22,23 @@
       </nav> 
       
       <!-- Segundo Meni -->
-      <nav class="flex items-center lg:pr-20">
-        <span class="flex text-xs mr-10 pr-4 [&>a]:hover:text-[#008248]"> 
-          <a href="" class="inline-block">
+      <nav class="flex gap-4">
+        <span class=""> 
+          <a href="" >
             <svg aria-hidden="true" focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"
             class="w-7 h-7 inline-block pr-2 "><path d="M12,11.475 C10.5214286,11.475 9.32142857,10.299 9.32142857,8.85 C9.32142857,7.401 10.5214286,6.225 12,6.225 C13.4785714,6.225 14.6785714,7.401 14.6785714,8.85 C14.6785714,10.299 13.4785714,11.475 12,11.475 M12,1.5 C7.85357143,1.5 4.5,4.7865 4.5,8.85 C4.5,14.3625 12,22.5 12,22.5 C12,22.5 19.5,14.3625 19.5,8.85 C19.5,4.7865 16.1464286,1.5 12,1.5"></path></svg>
             Find a store
           </a>
         </span>
-        <ul class="flex text-sm [&>li>a]:inline-block [&>li>a]:px-4 [&>li>a]:py-2">
-          <li class="items-center mr-4">
-            <a href="#" class=" rounded-[50px] border border-black hover:bg-gray-200 duration-300">Sign in</a>
+        <ul class="flex gap-2">
+          <li class="">
+            <a href="#">Sign in</a>
           </li>
           <li>
-            <a href="#" class="text-white bg-black rounded-[50px] border border-black hover:bg-gray-600 duration-300 ">Join now</a>
+            <a href="#">Join now</a>
           </li>
         </ul>
       </nav>
     </div> 
+  </div>
   </header>
-  <div class="bg-[#1e3932] text-white font-bold text-sm  h-10 flex items-center w-full px-32 lg:px-40 fixed">STARBUCKS REWARDS</div>
