making some changes on UI

--- a/src/app/components/herolanding/herolanding.component.html
+++ b/src/app/components/herolanding/herolanding.component.html
@@ -1,4 +1,4 @@
-<section class="w-full h-full">
+<section class="h-[800px]">
    <div class="bg-star bg-cover bg-no-repeat h-full bg-center bg-[#d4e9e2] ">
        <div class="container h-full mx-auto flex items-center">
            <div class="flex flex-col gap-4">
