--- a/src/app/components/scrollheader/scrollheader.component.html
+++ b/src/app/components/scrollheader/scrollheader.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center bg-[#1e3932] h-12" (scroll)="onscroll" >
-    <div class="container mx-auto px-20">
-        <p class="text-white text-sm font-bold bg-[#1e3932]">
+    <div class="container mx-auto md:px-[90px]">
+        <p class="text-white font-semibold tracking-wider bg-[#1e3932]">
             STARBUCKS REWARDS
         </p>
     </div>
