--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
-<header class="container mx-auto">
-  <div class=" flex items-center font-sodo ">
-    <div>
+<header class="w-full">
+  <div class=" mx-10  lg:text-base lg:container flex flex-grow-1 items-center font-sodo lg:mx-auto">
+    <div class="mr-10">
       <!-- logo -->
       <app-logo></app-logo>  
     </div>
     
-    <div class="hidden md:flex flex-grow justify-between">
+    <div class="hidden  md:flex flex-grow justify-between items-center">
       <!-- primer menu -->
       <nav  >
-        <ul class="flex gap-3 px-4 font text-base tracking-wider">
+        <ul class="flex gap-7 text-base tracking-wider">
           <li class=" hover:text-[#008248]">
             <a href="#">MENU</a>
           </li>
@@ -22,20 +22,22 @@
       </nav> 
       
       <!-- Segundo Meni -->
-      <nav class="flex gap-4">
-        <span class=""> 
-          <a href="" >
-            <svg aria-hidden="true" focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"
-            class="w-7 h-7 inline-block pr-2 "><path d="M12,11.475 C10.5214286,11.475 9.32142857,10.299 9.32142857,8.85 C9.32142857,7.401 10.5214286,6.225 12,6.225 C13.4785714,6.225 14.6785714,7.401 14.6785714,8.85 C14.6785714,10.299 13.4785714,11.475 12,11.475 M12,1.5 C7.85357143,1.5 4.5,4.7865 4.5,8.85 C4.5,14.3625 12,22.5 12,22.5 C12,22.5 19.5,14.3625 19.5,8.85 C19.5,4.7865 16.1464286,1.5 12,1.5"></path></svg>
+      <nav class="flex gap-10 items-center">
+      <span class="text-sm gorup"> 
+          <a href="" class="hovee:text-[#008248]"  (mouseover)="changeColor()" (mouseleave)="changeColorB()">
+            <svg aria-hidden="true" focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24" [attr.fill] ="Mycolor"
+            class="w-7 h-7 inline-block pr-2 "><path d="M12,11.475 C10.5214286,11.475 9.32142857,10.299 9.32142857,8.85 C9.32142857,7.401 10.5214286,6.225 12,6.225 C13.4785714,6.225 14.6785714,7.401 14.6785714,8.85 C14.6785714,10.299 13.4785714,11.475 12,11.475 M12,1.5 C7.85357143,1.5 4.5,4.7865 4.5,8.85 C4.5,14.3625 12,22.5 12,22.5 C12,22.5 19.5,14.3625 19.5,8.85 C19.5,4.7865 16.1464286,1.5 12,1.5"
+           >
+            </path></svg>
             Find a store
           </a>
         </span>
-        <ul class="flex gap-2">
+        <ul class="flex gap-4 items-center text-sm">
           <li class="">
-            <a href="#">Sign in</a>
+            <a href="#" class="border px-4 py-2 rounded-full border-black text-gray-800 hover:bg-zinc-200 duration-300" >Sign in</a>
           </li>
           <li>
-            <a href="#">Join now</a>
+            <a href="#" class="border px-4 py-2 rounded-full border-black text-white bg-black hover:bg-zinc-600 duration-300">Join now</a>
           </li>
         </ul>
       </nav>
